added order parsing endpoint
