# backend/openapi_server/openapi/openapi.yaml
@@ -542,6 +542,122 @@ paths:
       tags:
       - orders
       x-openapi-router-controller: openapi_server.controllers.orders_controller
+  /orders/list:
+    get:
+      description: list orders after certain criteria
+      operationId: orders_list_get
+      parameters:
+      - description: items per page
+        explode: true
+        in: query
+        name: limit
+        required: true
+        schema:
+          format: int32
+          maximum: 200
+          minimum: 0
+          type: integer
+        style: form
+      - description: page number
+        explode: true
+        in: query
+        name: page
+        required: true
+        schema:
+          format: int32
+          maximum: 2147483647
+          minimum: 0
+          type: integer
+        style: form
+      - description: state of the order
+        explode: true
+        in: query
+        name: state
+        required: false
+        schema:
+          enum:
+          - open
+          - working
+          - hold
+          - closed
+          maxLength: 20
+          pattern: "^[0-9a-zA-Z]+$"
+          type: string
+        style: form
+      - description: customer
+        explode: true
+        in: query
+        name: customer
+        required: false
+        schema:
+          maxLength: 255
+          pattern: "^[A-ZÄÖÜa-zäöüß]+(?:[-' ][A-ZÄÖÜa-zäöüß]+)+$"
+          type: string
+        style: form
+      - description: shipment type
+        explode: true
+        in: query
+        name: shipment
+        required: false
+        schema:
+          maxLength: 255
+          pattern: "^[0-9a-zA-Z]+$"
+          type: string
+        style: form
+      - description: Sort by
+        explode: true
+        in: query
+        name: sort
+        required: false
+        schema:
+          enum:
+          - id
+          - user
+          - state
+          - shipment
+          - addDate
+          - closeDate
+          maxLength: 255
+          pattern: "^[0-9a-zA-Z]+$"
+          type: string
+        style: form
+      - description: Sort order
+        explode: true
+        in: query
+        name: order
+        required: false
+        schema:
+          enum:
+          - asc
+          - desc
+          maxLength: 255
+          pattern: "^[0-9a-zA-Z]+$"
+          type: string
+        style: form
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                items:
+                  $ref: '#/components/schemas/Orders_response'
+                maxItems: 200
+                type: array
+          description: successful operation
+        "401":
+          description: Unathorized
+        "404":
+          description: Not Found
+        "429":
+          description: Too Many Requests
+        default:
+          description: default
+      security:
+      - bearerAuth: []
+      summary: list orders
+      tags:
+      - orders
+      x-openapi-router-controller: openapi_server.controllers.orders_controller
   /products:
     delete:
       description: deletes a product
